feat: AI 추천 서버와 연결 (#69)
* chore: AI 서버 환경 변수 추가

* fix: scrap 엔드포인트를 PATCH 메서드로 수정

* chore: 식당 응답 스펙 변경

- distance 필드 추가
- 가독성을 위해  factory method로 객체 생성하도록 변경

* feat: AI 서버에서 추천 리스트 받는 기능 구현

* feat: AI 서버와 연결된 추천 엔드포인트 추가

- 페이징 가능
- 위도, 경도, 페이지 번호 쿼리파라미터 필수값

* feat: 추천 서버 통신 예외처리 추가

* feat: 테스트를 위한 repository 코드 추가

* refactor: 팩토리 메서드에서 빌더 패턴을 재사용하도록 수정